# serializer version: 1
# name: test_build_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-3006292c/example-3006292c-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_3006292c"]
        
        [project]
        name = "example-3006292c"
        version = "0.0.0"
        dependencies = [
            '''example-a-3006292c''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/src/example_3006292c/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-3006292c/example-a-3006292c-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-a-3006292c-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_3006292c"]
        
        [project]
        name = "example-a-3006292c"
        version = "1.0.0"
        dependencies = [
            '''example-b-3006292c>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-a-3006292c-1.0.0/src/example_a_3006292c/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-3006292c/example-b-3006292c-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-b-3006292c-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_3006292c"]
        
        [project]
        name = "example-b-3006292c"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-b-3006292c-1.0.0/src/example_b_3006292c/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-3006292c/example-b-3006292c-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-b-3006292c-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_3006292c"]
        
        [project]
        name = "example-b-3006292c"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-b-3006292c-2.0.0/src/example_b_3006292c/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-3006292c/example-b-3006292c-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-b-3006292c-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_3006292c"]
        
        [project]
        name = "example-b-3006292c"
        version = "3.0.0"
        dependencies = [
            '''example-c-3006292c''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-b-3006292c-3.0.0/src/example_b_3006292c/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-3006292c/example_3006292c-0.0.0.tar.gz': 'md5:15eeeec589e819086d00338775d4e7c0',
      'dist/example-3006292c/example_a_3006292c-1.0.0-py3-none-any.whl': 'md5:23325e6fbef51c4aac9ab42b5e6bbe27',
      'dist/example-3006292c/example_a_3006292c-1.0.0.tar.gz': 'md5:c9d09b056c3bae0af9ef3452a3557170',
      'dist/example-3006292c/example_b_3006292c-1.0.0-py3-none-any.whl': 'md5:1929913ca8b9897c37be2c99a7724e48',
      'dist/example-3006292c/example_b_3006292c-1.0.0.tar.gz': 'md5:7f67a0c8d24c51fb4cfa4af985623473',
      'dist/example-3006292c/example_b_3006292c-2.0.0-py3-none-any.whl': 'md5:df67d7821c756f82fb7b8965ae818324',
      'dist/example-3006292c/example_b_3006292c-2.0.0.tar.gz': 'md5:6ca5c139db6de24295a3e8d79958b53c',
      'dist/example-3006292c/example_b_3006292c-3.0.0-py3-none-any.whl': 'md5:95e4d109682aa58d2e853a31de43ca91',
      'dist/example-3006292c/example_b_3006292c-3.0.0.tar.gz': 'md5:d0e674bcdcf5e5e3c9e6fa44db899563',
      'tree': '''
        test_build_test_scenarios_exam0
        ├── build
        │   └── example-3006292c
        │       ├── example-3006292c-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_3006292c
        │       │           └── __init__.py
        │       ├── example-a-3006292c-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_3006292c
        │       │           └── __init__.py
        │       ├── example-b-3006292c-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_3006292c
        │       │           └── __init__.py
        │       ├── example-b-3006292c-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_3006292c
        │       │           └── __init__.py
        │       └── example-b-3006292c-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_3006292c
        │                   └── __init__.py
        └── dist
            └── example-3006292c
                ├── example_3006292c-0.0.0.tar.gz
                ├── example_a_3006292c-1.0.0-py3-none-any.whl
                ├── example_a_3006292c-1.0.0.tar.gz
                ├── example_b_3006292c-1.0.0-py3-none-any.whl
                ├── example_b_3006292c-1.0.0.tar.gz
                ├── example_b_3006292c-2.0.0-py3-none-any.whl
                ├── example_b_3006292c-2.0.0.tar.gz
                ├── example_b_3006292c-3.0.0-py3-none-any.whl
                └── example_b_3006292c-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-3006292c
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-toml-64e6f3c2/example-toml-64e6f3c2-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-64e6f3c2-0.0.0/pyproject.toml': 'md5:b82a986f2720a72621d401c09a49c27a',
      'build/example-toml-64e6f3c2/example-toml-64e6f3c2-0.0.0/src/example_toml_64e6f3c2/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-a-64e6f3c2-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-a-64e6f3c2-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_a_64e6f3c2"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_a_64e6f3c2"]
        
        [project]
        name = "example-toml-a-64e6f3c2"
        version = "1.0.0"
        dependencies = [
            '''example-toml-b-64e6f3c2>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-a-64e6f3c2-1.0.0/src/example_toml_a_64e6f3c2/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_64e6f3c2"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_64e6f3c2"]
        
        [project]
        name = "example-toml-b-64e6f3c2"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-1.0.0/src/example_toml_b_64e6f3c2/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_64e6f3c2"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_64e6f3c2"]
        
        [project]
        name = "example-toml-b-64e6f3c2"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-2.0.0/src/example_toml_b_64e6f3c2/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_64e6f3c2"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_64e6f3c2"]
        
        [project]
        name = "example-toml-b-64e6f3c2"
        version = "3.0.0"
        dependencies = [
            '''example-toml-c-64e6f3c2''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-64e6f3c2/example-toml-b-64e6f3c2-3.0.0/src/example_toml_b_64e6f3c2/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-toml-64e6f3c2/example_toml_64e6f3c2-0.0.0.tar.gz': 'md5:5fbd710d4af31c6468bb690a7bf6ea90',
      'dist/example-toml-64e6f3c2/example_toml_a_64e6f3c2-1.0.0-py3-none-any.whl': 'md5:ee34f19e4c47af7881aa0453d1f09eea',
      'dist/example-toml-64e6f3c2/example_toml_a_64e6f3c2-1.0.0.tar.gz': 'md5:5056faf5a0b67d14f7c0102666336252',
      'dist/example-toml-64e6f3c2/example_toml_b_64e6f3c2-1.0.0-py3-none-any.whl': 'md5:ebe9a61fc024f1cd35a74a4090bf465c',
      'dist/example-toml-64e6f3c2/example_toml_b_64e6f3c2-1.0.0.tar.gz': 'md5:c435cd691ebf35fcfd009e4fd7523f63',
      'dist/example-toml-64e6f3c2/example_toml_b_64e6f3c2-2.0.0-py3-none-any.whl': 'md5:8d7769d63a47e1b32d0b30e33655a050',
      'dist/example-toml-64e6f3c2/example_toml_b_64e6f3c2-2.0.0.tar.gz': 'md5:049a53be35044bf82cc11cccb9339dc1',
      'dist/example-toml-64e6f3c2/example_toml_b_64e6f3c2-3.0.0-py3-none-any.whl': 'md5:ac495064fbf7df047716f9f2698ba38e',
      'dist/example-toml-64e6f3c2/example_toml_b_64e6f3c2-3.0.0.tar.gz': 'md5:ee4adb6bec93a9345320728b31828377',
      'tree': '''
        test_build_test_scenarios_exam1
        ├── build
        │   └── example-toml-64e6f3c2
        │       ├── example-toml-64e6f3c2-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_64e6f3c2
        │       │           └── __init__.py
        │       ├── example-toml-a-64e6f3c2-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_a_64e6f3c2
        │       │           └── __init__.py
        │       ├── example-toml-b-64e6f3c2-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_64e6f3c2
        │       │           └── __init__.py
        │       ├── example-toml-b-64e6f3c2-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_64e6f3c2
        │       │           └── __init__.py
        │       └── example-toml-b-64e6f3c2-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_toml_b_64e6f3c2
        │                   └── __init__.py
        └── dist
            └── example-toml-64e6f3c2
                ├── example_toml_64e6f3c2-0.0.0.tar.gz
                ├── example_toml_a_64e6f3c2-1.0.0-py3-none-any.whl
                ├── example_toml_a_64e6f3c2-1.0.0.tar.gz
                ├── example_toml_b_64e6f3c2-1.0.0-py3-none-any.whl
                ├── example_toml_b_64e6f3c2-1.0.0.tar.gz
                ├── example_toml_b_64e6f3c2-2.0.0-py3-none-any.whl
                ├── example_toml_b_64e6f3c2-2.0.0.tar.gz
                ├── example_toml_b_64e6f3c2-3.0.0-py3-none-any.whl
                └── example_toml_b_64e6f3c2-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-toml-64e6f3c2
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-yaml-db3b5da9/example-yaml-a-db3b5da9-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-a-db3b5da9-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_a_db3b5da9"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_a_db3b5da9"]
        
        [project]
        name = "example-yaml-a-db3b5da9"
        version = "1.0.0"
        dependencies = [
            '''example-yaml-b-db3b5da9>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-a-db3b5da9-1.0.0/src/example_yaml_a_db3b5da9/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_db3b5da9"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_db3b5da9"]
        
        [project]
        name = "example-yaml-b-db3b5da9"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-1.0.0/src/example_yaml_b_db3b5da9/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_db3b5da9"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_db3b5da9"]
        
        [project]
        name = "example-yaml-b-db3b5da9"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-2.0.0/src/example_yaml_b_db3b5da9/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_db3b5da9"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_db3b5da9"]
        
        [project]
        name = "example-yaml-b-db3b5da9"
        version = "3.0.0"
        dependencies = [
            '''example-yaml-c-db3b5da9''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-b-db3b5da9-3.0.0/src/example_yaml_b_db3b5da9/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-db3b5da9-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-db3b5da9/example-yaml-db3b5da9-0.0.0/pyproject.toml': 'md5:f79d7008f1245098e8e223aab202f03b',
      'build/example-yaml-db3b5da9/example-yaml-db3b5da9-0.0.0/src/example_yaml_db3b5da9/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-yaml-db3b5da9/example_yaml_a_db3b5da9-1.0.0-py3-none-any.whl': 'md5:e4f94aade6c05d0ae71002c8f48b7f57',
      'dist/example-yaml-db3b5da9/example_yaml_a_db3b5da9-1.0.0.tar.gz': 'md5:d995293a377a6b6ef5e4c597f3ffcaf0',
      'dist/example-yaml-db3b5da9/example_yaml_b_db3b5da9-1.0.0-py3-none-any.whl': 'md5:f0815e49ebf607f6e33623d18e0cd226',
      'dist/example-yaml-db3b5da9/example_yaml_b_db3b5da9-1.0.0.tar.gz': 'md5:60e7c97f4593a4ec4ec7a396378d918a',
      'dist/example-yaml-db3b5da9/example_yaml_b_db3b5da9-2.0.0-py3-none-any.whl': 'md5:75a75e9feb7c7c1eebf86779a68d183f',
      'dist/example-yaml-db3b5da9/example_yaml_b_db3b5da9-2.0.0.tar.gz': 'md5:169d4e6e1e989cde294aa356ce862817',
      'dist/example-yaml-db3b5da9/example_yaml_b_db3b5da9-3.0.0-py3-none-any.whl': 'md5:967f3262e5116a5406673d94898541f8',
      'dist/example-yaml-db3b5da9/example_yaml_b_db3b5da9-3.0.0.tar.gz': 'md5:f12ce15277de4bfb6f0c012b79cc3f1a',
      'dist/example-yaml-db3b5da9/example_yaml_db3b5da9-0.0.0.tar.gz': 'md5:110ba375b90dc3f038b000055831a36b',
      'tree': '''
        test_build_test_scenarios_exam2
        ├── build
        │   └── example-yaml-db3b5da9
        │       ├── example-yaml-a-db3b5da9-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_a_db3b5da9
        │       │           └── __init__.py
        │       ├── example-yaml-b-db3b5da9-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_db3b5da9
        │       │           └── __init__.py
        │       ├── example-yaml-b-db3b5da9-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_db3b5da9
        │       │           └── __init__.py
        │       ├── example-yaml-b-db3b5da9-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_db3b5da9
        │       │           └── __init__.py
        │       └── example-yaml-db3b5da9-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_yaml_db3b5da9
        │                   └── __init__.py
        └── dist
            └── example-yaml-db3b5da9
                ├── example_yaml_a_db3b5da9-1.0.0-py3-none-any.whl
                ├── example_yaml_a_db3b5da9-1.0.0.tar.gz
                ├── example_yaml_b_db3b5da9-1.0.0-py3-none-any.whl
                ├── example_yaml_b_db3b5da9-1.0.0.tar.gz
                ├── example_yaml_b_db3b5da9-2.0.0-py3-none-any.whl
                ├── example_yaml_b_db3b5da9-2.0.0.tar.gz
                ├── example_yaml_b_db3b5da9-3.0.0-py3-none-any.whl
                ├── example_yaml_b_db3b5da9-3.0.0.tar.gz
                └── example_yaml_db3b5da9-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-yaml-db3b5da9
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp0
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-3006292c
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       ├── requires b>1.0.0
      │       │   ├── satisfied by b-2.0.0
      │       │   └── satisfied by b-3.0.0
      │       └── requires python>=3.8
      └── b
          ├── b-1.0.0
          │   └── requires python>=3.8
          ├── b-2.0.0
          │   └── requires python>=3.8
          └── b-3.0.0
              ├── requires c
                  └── unsatisfied: no versions for package
              └── requires python>=3.8
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp1
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-toml-64e6f3c2
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       ├── requires b>1.0.0
      │       │   ├── satisfied by b-2.0.0
      │       │   └── satisfied by b-3.0.0
      │       └── requires python>=3.8
      └── b
          ├── b-1.0.0
          │   └── requires python>=3.8
          ├── b-2.0.0
          │   └── requires python>=3.8
          └── b-3.0.0
              ├── requires c
                  └── unsatisfied: no versions for package
              └── requires python>=3.8
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp2
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-yaml-db3b5da9
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       ├── requires b>1.0.0
      │       │   ├── satisfied by b-2.0.0
      │       │   └── satisfied by b-3.0.0
      │       └── requires python>=3.8
      └── b
          ├── b-1.0.0
          │   └── requires python>=3.8
          ├── b-2.0.0
          │   └── requires python>=3.8
          └── b-3.0.0
              ├── requires c
                  └── unsatisfied: no versions for package
              └── requires python>=3.8
      
  
    ''',
  })
# ---
